# corda_massively_scalable_deliberative_processes

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  railway.toml
.github/workflows/: neon_production_migrations.yml  neon_workflow.yml
apps/api/: main.py
apps/api/msdp_api/: __init__.py  app.py
apps/api/msdp_api/api/: dependencies.py  routes_admin.py  routes_chat.py  routes_public.py  routes_webhook.py
apps/api/msdp_api/core/: config.py
apps/api/msdp_api/db/: migrations.py  models.py
apps/api/msdp_api/repositories/: memory.py  postgres.py  protocols.py
apps/api/msdp_api/services/: cover_image.py  group_assignment.py  summarization.py  topic_suggestion.py  web_group_assignment.py
apps/api/msdp_api/telegram/: gateway.py  models.py  service.py
apps/api/scripts/: __init__.py  apply_migrations.py  apply_schema.py
apps/api/sql/migrations/: 20260504_cross_pollination.sql  20260508_topic_group_capacity.sql  20260508_topic_seed_bullets.sql  20260509_topic_cover_image.sql  20260512_web_participants.sql
apps/web/: package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/app/: page.tsx
apps/web/app/chats/: page.tsx
apps/web/app/results/: page.tsx
apps/web/components/: admin-dashboard.tsx  chat-view.tsx  chats-view.tsx  error-state.tsx  home-view.tsx  loading-state.tsx  markdown-summary.tsx  results-view.tsx
apps/web/e2e/: home-cards.spec.ts
apps/web/lib/: api.ts
docs/: mkdocs.yml
docs/docs/: index.md
docs/operations/: deployment.md
msdp/: __init__.py
tests/: test_data.py
tests/api/: conftest.py  test_migrations.py  test_routes.py  test_services.py  test_telegram_gateway.py
tests/web/: admin-dashboard.test.tsx  error-and-loading.test.tsx  home-view.test.tsx  results-view.test.tsx
