[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "msdp"
version = "0.0.1"
description = "The project aims to finalize the design of an open-source platform for massively scalable deliberation, build a first prototype, and develop experimental designs to verify its usefulness with both LLM agents and human"
authors = [
  { name = "Kevin Blin, Ahmed Haj Ahmed, Katharina Hofmann, Marlon Julian Nombrado, Maurice Flechtner" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "anthropic",
    "asyncpg",
    "fastapi",
    "httpx",
    "mkdocs",
    "pip",
    "pydantic-settings",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "python-telegram-bot==20.7",
    "ruff",
    "ty",
    "uvicorn",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["msdp", "apps/api/msdp_api", "tests"]
include = ["pyproject.toml", "msdp/**/*.py", "apps/api/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # trailing comma — conflicts with formatter
    "D203",   # incompatible with D211 (no-blank-line-before-class)
    "D212",   # incompatible with D213 (multi-line-summary-second-line)
    "TC001",  # keep runtime imports close to FastAPI and Pydantic usage
    "TC002",  # keep third-party imports at module scope
    "TC003",  # keep standard imports at module scope for readability
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",       # docstrings not required in tests
    "ANN",     # type annotations not required in tests
    "S101",    # assert is expected in pytest
    "INP001",  # tests/ doesn't need __init__.py
    "PLR2004", # magic values are fine in tests
    "FBT",     # boolean args are fine in test helpers
]
"live_tests/**" = [
    "T201",   # print() allowed in live tests
    "D",      # docstrings not required in live tests
    "ANN",    # type annotations not required in live tests
    "INP001", # live_tests/ doesn't need __init__.py
]
"apps/api/msdp_api/repositories/protocols.py" = [
    "D102",
]
"apps/api/msdp_api/telegram/gateway.py" = [
    "D102",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["msdp", "msdp_api"]
force-sort-within-sections = true

[tool.pytest.ini_options]
pythonpath = ["apps/api", "."]
asyncio_mode = "auto"

[tool.ty.environment]
root = ["./apps/api", "."]
extra-paths = ["./apps/api"]
